--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,19 @@
-.exercicio{
-	border-style: solid;
-	border-width: 1px;
-	padding: 10px;
-	margin: 15px;
+.linha{
+	margin-bottom: 5px;
+}
+
+.btn{
+	border:0;
+	padding:0;
+	cursor:pointer;
+	background:transparent;
+	vertical-align: middle;
+}
+
+.btn img{
+	width: 30px;
+}
+
+.btn:hover{
+	background-color: #f0f0f0;
 }
